--- a/FinalProjDotNet/PopUpAdd.xaml
+++ b/FinalProjDotNet/PopUpAdd.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProjDotNet"
+        xmlns:wpfanimated="http://wpfanimatedgif.codeplex.com"
         mc:Ignorable="d"
-        Title="PopUpAdd" Height="300" Width="324.344" Background="#FFBDBDBD">
+        Title="PopUpAdd" Height="300" Width="356.344" Background="#FFBDBDBD">
 
     <Grid>
 
@@ -22,9 +23,17 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
+
+        <Image wpfanimated:ImageBehavior.AnimatedSource="bg.gif"
+               wpfanimated:ImageBehavior.RepeatBehavior="1"
+               wpfanimated:ImageBehavior.AnimateInDesignMode="False"
+               wpfanimated:ImageBehavior.AutoStart="True"  Grid.ColumnSpan="2" Grid.Row="0" Grid.Column="0" Grid.RowSpan="6" Margin="-22,-47,-45,0"/>
+        <!---->
+
+
         <Label  Content="Add To Table" Grid.Column="0" Grid.ColumnSpan="2" Margin="15" VerticalAlignment="Center" Width="236" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Segoe UI Historic" FontSize="20" FontWeight="Bold" Background="{x:Null}" HorizontalAlignment="Center" BorderThickness="2">
             <Label.Foreground>
-                <SolidColorBrush Color="#FF2C6DCB" Opacity="0.945"/>
+                <SolidColorBrush Color="#FFFBFBFB" Opacity="0.945"/>
             </Label.Foreground>
             <Label.BorderBrush>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
