--- a/FinalProjDotNet/PopUpEdit.xaml
+++ b/FinalProjDotNet/PopUpEdit.xaml
@@ -4,45 +4,64 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProjDotNet"
+        xmlns:wpfanimated="http://wpfanimatedgif.codeplex.com"
         mc:Ignorable="d"
-        Title="PopUpEdit" Height="300" Width="300">
+        Title="PopUpEdit" Height="300" Width="324.344" Background="#FFBDBDBD">
 
 
 
     <Grid>
 
-        <Label Content="Edit Contact" HorizontalAlignment="Left" Margin="113,10,0,0" VerticalAlignment="Top" Background="Black" Foreground="#FFFFF9F9"/>
-        <TextBox x:Name="idEdit" HorizontalAlignment="Left" Margin="120,56,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="24" Width="148" Visibility="Hidden"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
 
-        <Label Content="First Name: " HorizontalAlignment="Left" Margin="24,56,0,0" VerticalAlignment="Top" Height="24" Width="74"  Background="#FF0A4364" Foreground="White"/>
-        <TextBox x:Name="fNameEdit" HorizontalAlignment="Left" Margin="120,56,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="24" Width="148">
+        <Image wpfanimated:ImageBehavior.AnimatedSource="moto.gif"
+               wpfanimated:ImageBehavior.RepeatBehavior="1"
+               wpfanimated:ImageBehavior.AnimateInDesignMode="False"
+               wpfanimated:ImageBehavior.AutoStart="True"  Grid.ColumnSpan="2" Grid.Row="0" Grid.Column="0" Grid.RowSpan="6" Margin="-43,-165,-66,-95"/>
+
+        <Label Content="Edit Contact" Grid.Column="0" Grid.ColumnSpan="2" Margin="15" VerticalAlignment="Center" Width="236" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Segoe UI Historic" FontSize="20" FontWeight="Bold" Background="{x:Null}" HorizontalAlignment="Center" BorderThickness="2" Foreground="White"/>
+        <TextBox x:Name="idEdit" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center" Visibility="Hidden"/>
+
+        <Label Content="First Name: " Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="auto" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <TextBox x:Name="fNameEdit" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
             <TextBox.Background>
                 <SolidColorBrush Color="#FFF07715" Opacity="0.5"/>
             </TextBox.Background>
         </TextBox>
 
-        <Label Content="Last Name: " HorizontalAlignment="Left" Margin="24,104,0,0" VerticalAlignment="Top" Height="25" Width="82"  Background="#FF0A4364" Foreground="White"/>
-        <TextBox x:Name="lNameEdit" HorizontalAlignment="Left" Margin="120,104,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="25" Width="148">
+        <Label Content="Last Name: " Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="auto" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <TextBox x:Name="lNameEdit" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
             <TextBox.Background>
                 <SolidColorBrush Color="#FFF07715" Opacity="0.5"/>
             </TextBox.Background>
         </TextBox>
 
-        <Label Content="Phone Number: " HorizontalAlignment="Left" Margin="24,153,0,0" VerticalAlignment="Top" Height="24" Width="96"  Background="#FF0A4364" Foreground="White"/>
-        <TextBox x:Name="pNumEdit" HorizontalAlignment="Left" Margin="120,153,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="24" Width="148">
+        <Label Content="Phone Number: " Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="auto" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <TextBox x:Name="pNumEdit" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
             <TextBox.Background>
                 <SolidColorBrush Color="#FFF07715" Opacity="0.5"/>
             </TextBox.Background>
         </TextBox>
 
-        <Label Content="Email: " HorizontalAlignment="Left" Margin="24,197,0,0" VerticalAlignment="Top" Height="24" Width="74"  Background="#FF0A4364" Foreground="White"/>
-        <TextBox x:Name="emailEdit" HorizontalAlignment="Left" Margin="120,197,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="24" Width="148">
+        <Label Content="Email: " Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="auto" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <TextBox x:Name="emailEdit" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
             <TextBox.Background>
                 <SolidColorBrush Color="#FFF07715" Opacity="0.5"/>
             </TextBox.Background>
         </TextBox>
 
-        <Button x:Name="Edit_Button" Content="Edit" HorizontalAlignment="Left" Margin="212,239,0,0" VerticalAlignment="Top" Width="56" RenderTransformOrigin="0.862,0.546" Click="Edit_Button_Click" Background="#FFF07715" Foreground="White"/>
+        <Button x:Name="Edit_Button" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="Add" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Top" Width="75" Click="Edit_Button_Click" Background="#FFF07715" Foreground="White"/>
 
     </Grid>
 </Window>
