--- a/FinalProjDotNet/popUpView.xaml
+++ b/FinalProjDotNet/popUpView.xaml
@@ -4,31 +4,51 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProjDotNet"
+        xmlns:wpfanimated="http://wpfanimatedgif.codeplex.com"
         mc:Ignorable="d"
-        Title="PopUpView" Height="300" Width="300">
+        Title="PopUpView" Height="300" Width="324.344" Background="#FFBDBDBD">
     <Grid>
-        <Label Content="Viewing user data" HorizontalAlignment="center"  VerticalAlignment="Top" Margin="98,10,88,0" Width="106" Background="Black" Foreground="White" />
+        <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
 
-        <Label Content="First Name: " HorizontalAlignment="Left" Margin="21,96,0,0" VerticalAlignment="Top" Background="#FF0A4364" Foreground="White"/>
-        <Label Name="firstName" Content="" HorizontalAlignment="Left" Margin="99,96,0,0" VerticalAlignment="Top" RenderTransformOrigin="3.685,-3.13" Width="183">
+        <Image wpfanimated:ImageBehavior.AnimatedSource="boom.gif"
+               wpfanimated:ImageBehavior.RepeatBehavior="1"
+               wpfanimated:ImageBehavior.AnimateInDesignMode="False"
+               wpfanimated:ImageBehavior.AutoStart="True"  Grid.ColumnSpan="2" Grid.Row="0" Grid.Column="0" Grid.RowSpan="6" Margin="-31,-113,-48,-113"/>
+
+
+        <Label Content="Viewing user data" Grid.Column="0" Grid.ColumnSpan="2" Margin="15" VerticalAlignment="Center" Width="236" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Segoe UI Historic" FontSize="20" FontWeight="Bold" Background="{x:Null}" HorizontalAlignment="Center" BorderThickness="2" Foreground="White" />
+
+        <Label Content="First Name: " Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="auto" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <Label Name="firstName" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
             <Label.Background>
                 <SolidColorBrush Color="#FFF07715" Opacity="0.5"/>
             </Label.Background>
         </Label>
-        <Label Content="Last Name: " HorizontalAlignment="Left" Margin="21,127,0,0" VerticalAlignment="Top"  Background="#FF0A4364" Foreground="White"/>
-        <Label Name="lastName" Content="" HorizontalAlignment="Left" Margin="98,127,0,0" VerticalAlignment="Top" Width="184">
+        <Label Content="Last Name: " Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="auto" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <Label Name="lastName" Content="" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
             <Label.Background>
                 <SolidColorBrush Color="#FFF07715" Opacity="0.5"/>
             </Label.Background>
         </Label>
-        <Label Content="Phone Number: " HorizontalAlignment="Left" Margin="21,158,0,0" VerticalAlignment="Top"  Background="#FF0A4364" Foreground="White"/>
-        <Label Name="phoneNumber" Content="" HorizontalAlignment="Left" Margin="122,158,0,0" VerticalAlignment="Top" Width="160">
+        <Label Content="Phone Number: " Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="auto" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <Label Name="phoneNumber" Content="" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
             <Label.Background>
                 <SolidColorBrush Color="#FFF07715" Opacity="0.5"/>
             </Label.Background>
         </Label>
-        <Label Content="Email: " HorizontalAlignment="Left" Margin="21,189,0,0" VerticalAlignment="Top"  Background="#FF0A4364" Foreground="White"/>
-        <Label Name="email" Content="" HorizontalAlignment="Left" Margin="70,189,0,0" VerticalAlignment="Top" Width="212">
+        <Label Content="Email: " Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="auto" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <Label Name="email" Content="" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
             <Label.Background>
                 <SolidColorBrush Color="#FFF07715" Opacity="0.5"/>
             </Label.Background>
